5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1592_1800.log
== SUBMITION (2019-03-22 21:39:51) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(total, 6)
-- EXECUTION TIME:
0.136477
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666666666666668 6
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203045685 6
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15094339622641 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:40:02) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(total, 6)
-- OUTPUT:
25.666666666666668 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:40:52) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total, 6))
-- EXECUTION TIME:
0.180838
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:41:05) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total,6))
-- EXECUTION TIME:
0.135703
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:41:08) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:42:14) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total,6))
-- EXECUTION TIME:
0.186397
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:42:19) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:43:17) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total,6))
-- EXECUTION TIME:
0.129168
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:43:20) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total,6))
-- EXECUTION TIME:
0.147106
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:43:21) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total,6))
-- EXECUTION TIME:
0.190367
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:43:26) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:43:39) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:44:29) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total,6))
-- EXECUTION TIME:
0.2151
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:44:47) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total, 6))
-- EXECUTION TIME:
0.170772
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:45:12) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round((a**2 + b**2 + c**2)/(a + b + c), 6))
-- EXECUTION TIME:
0.133138
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:45:36) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
x = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(x, 6))
-- EXECUTION TIME:
0.175928
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:45:48) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total, 6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:47:44) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total, 6))
-- EXECUTION TIME:
0.128554
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:56:28) 
-- CODE:
from math import*

a = float(input())
b = float(input())
c = float(input())

total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total, 6))
-- EXECUTION TIME:
0.205749
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:56:33) 
-- CODE:
from math import*

a = float(input())
b = float(input())
c = float(input())

total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total, 6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:58:03) 
-- CODE:
from math import*

a = float(input())
b = float(input())
c = float(input())

total = ((a**2 + b**2 + c**2)/(a + b + c))
print(round(total, 6))
-- EXECUTION TIME:
0.139723
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:33:54) 
-- CODE:
from math import*

a = float(input())
b = float(input())
c = float(input())

total = ((a**2 + b**2 + c**2)/(a + b + c))
print(abs(round(total, 6)))
-- EXECUTION TIME:
0.205839
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:38:04) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())

total = (a**2 + b**2 + c**2)/(a + b + c)
print((round(total, 6)))
-- EXECUTION TIME:
0.251297
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:38:20) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())

total = (a**2 + b**2 + c**2)/(a + b + c)
prin(round(total, 6))
-- EXECUTION TIME:
0.227916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 6, in <module>
    prin(round(total, 6))
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:38:26) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())

total = (a**2 + b**2 + c**2)/(a + b + c)
print(round(total, 6))
-- EXECUTION TIME:
0.13936
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:39:14) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
while (a+b+c>0)
total = (a**2 + b**2 + c**2)/(a + b + c)
print(round(total, 6))
-- EXECUTION TIME:
0.17762
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 4
    while (a+b+c>0)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:39:35) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())

total = (a**2 + b**2 + c**2)/(a + b + c)
print(round(total, 6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:40:42) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

total = (a**2 + b**2 + c**2)/(a + b + c)
print(round(total, 6))
-- EXECUTION TIME:
0.177018
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:14:25) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

total = (a**2 + b**2 + c**2)/(a + b + c)

print(round(total, 6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:14:39) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

total = (a**2 + b**2 + c**2)/(a + b + c)

print(round(total, 6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:14:48) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

total = (a**2 + b**2 + c**2)/(a + b + c)

print(round(total, 6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:16:32) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

total = (a**2 + b**2 + c**2)/(a + b + c)

print(round(total, 6))
-- EXECUTION TIME:
0.177503
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:17:06) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

print((a**2 + b**2 + c**2)/(a + b + c))


-- EXECUTION TIME:
0.140514
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666666666666668
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203045685
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15094339622641
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:17:10) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

print((a**2 + b**2 + c**2)/(a + b + c))


-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:18:19) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

print(round((a**2 + b**2 + c**2)/(a + b + c)), 6)


-- EXECUTION TIME:
0.150919
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
26 6
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
343 6
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:18:44) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

print(round((a**2 + b**2 + c**2)/(a + b + c), 6)


-- EXECUTION TIME:
0.144057
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 7
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:18:49) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

print(round((a**2 + b**2 + c**2)/(a + b + c), 6)


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:40:17) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

print(round((a**2 + b**2 + c**2)/(a + b + c), 6))


-- EXECUTION TIME:
0.135538
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
a:b:c:342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
a:b:c:106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:40:31) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

print(round((a**2 + b**2 + c**2)/(a + b + c), 6))


-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:41:06) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

print(round((a**2 + b**2 + c**2)/(a + b + c), ))


-- OUTPUT:
26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:41:13) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))

print(round((a**2 + b**2 + c**2)/(a + b + c), 7))


-- EXECUTION TIME:
0.164103
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
